<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/operand1_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/operand1_hint" />

    <EditText
        android:id="@+id/operand2_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/operand2_hint" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_label" />

    <Button
        android:id="@+id/subtract_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract_label" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply_label" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide_label" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textSize="24sp" />

</LinearLayout>
