<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/decimal_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/decimal_hint" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_label" />

    <TextView
        android:id="@+id/octal_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/octal_label"
        android:textSize="20sp" />

</LinearLayout>
