<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/operand1_edit_text"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="1"
        android:hint="@string/operand1_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/operand2_edit_text"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/operand1_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="1"
        android:hint="@string/operand2_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operand2_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/draw_button_text" />

    <com.example.coursework.DrawView
        android:id="@+id/draw_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/draw_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
